--- a/nginx/conf.d/scalelite-ssl.template
+++ b/nginx/conf.d/scalelite-ssl.template
@@ -1,18 +1,13 @@
 access_log stderr combined;
 
 server {
-	listen 80;
-	listen [::]:80;
-
-	include conf.d/scalelite.common;
-}
-
-server {
 	# generated 2020-02-14, Mozilla Guideline v5.4, nginx 1.16.1, OpenSSL 1.1.1d, intermediate configuration
 	# https://ssl-config.mozilla.org/#server=nginx&version=1.16.1&config=intermediate&openssl=1.1.1d&guideline=5.4
 
-	listen 443 ssl;
-	listen [::]:443 ssl;
+	listen 80;
+	listen [::]:80;
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
 
 	ssl_certificate /etc/nginx/ssl/live/$URL_HOST/fullchain.pem;
 	ssl_certificate_key /etc/nginx/ssl/live/$URL_HOST/privkey.pem;
