Attempt with default_Server

--- a/nginx/conf.d/scalelite.template
+++ b/nginx/conf.d/scalelite.template
@@ -1,10 +1,8 @@
 access_log stderr combined;
 
 server {
-	server_name $URL_HOST;
-	
-	listen 80;
-	listen [::]:80;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 	include conf.d/scalelite.common;
 }
