--- a/systemd/scalelite-api.service
+++ b/systemd/scalelite-api.service
@@ -4,11 +4,15 @@ After=network-online.target
 Wants=network-online.target
 Before=scalelite.target
 PartOf=scalelite.target
+
 [Service]
+Environment="SCALELITE_REPO=blindsidenetwks"
+Environment="SCALELITE_TAG=v1"
 EnvironmentFile=/etc/default/scalelite
 ExecStartPre=-/usr/bin/docker kill scalelite-api
 ExecStartPre=-/usr/bin/docker rm scalelite-api
-ExecStartPre=/usr/bin/docker pull blindsidenetwks/scalelite:${SCALELITE_TAG}-api
-ExecStart=/usr/bin/docker run --name scalelite-api --env-file /etc/default/scalelite --network scalelite --mount type=bind,source=${SCALELITE_RECORDING_DIR},target=/var/bigbluebutton blindsidenetwks/scalelite:${SCALELITE_TAG}-api
+ExecStartPre=/usr/bin/docker pull ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-api
+ExecStart=/usr/bin/docker run --name scalelite-api --env-file /etc/default/scalelite --network scalelite --mount type=bind,source=${SCALELITE_RECORDING_DIR},target=/var/bigbluebutton ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-api
+
 [Install]
 WantedBy=scalelite.target
