--- a/systemd/scalelite-nginx.service
+++ b/systemd/scalelite-nginx.service
@@ -7,11 +7,15 @@ PartOf=scalelite.target
 After=scalelite-api.service
 Requires=scalelite-api.service
 After=remote-fs.target
+
 [Service]
+Environment="SCALELITE_REPO=blindsidenetwks"
+Environment="SCALELITE_TAG=v1"
 EnvironmentFile=/etc/default/scalelite
 ExecStartPre=-/usr/bin/docker kill scalelite-nginx
 ExecStartPre=-/usr/bin/docker rm scalelite-nginx
-ExecStartPre=/usr/bin/docker pull blindsidenetwks/scalelite:${SCALELITE_TAG}-nginx
-ExecStart=/usr/bin/docker run --name scalelite-nginx --env-file /etc/default/scalelite --network scalelite --publish 80:80 --publish 443:443 --mount type=bind,source=${SCALELITE_RECORDING_DIR}/published,target=/var/bigbluebutton/published,readonly $SCALELITE_NGINX_EXTRA_OPTS blindsidenetwks/scalelite:${SCALELITE_TAG}-nginx
+ExecStartPre=/usr/bin/docker pull ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-nginx
+ExecStart=/usr/bin/docker run --name scalelite-nginx --env-file /etc/default/scalelite --network scalelite --publish 80:80 --publish 443:443 --mount type=bind,source=${SCALELITE_RECORDING_DIR}/published,target=/var/bigbluebutton/published,readonly $SCALELITE_NGINX_EXTRA_OPTS ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-nginx
+
 [Install]
 WantedBy=scalelite.target
