--- a/systemd/scalelite-recording-importer.service
+++ b/systemd/scalelite-recording-importer.service
@@ -6,11 +6,15 @@ Before=scalelite.target
 PartOf=scalelite.target
 After=scalelite-api.service
 After=remote-fs.target
+
 [Service]
+Environment="SCALELITE_REPO=blindsidenetwks"
+Environment="SCALELITE_TAG=v1"
 EnvironmentFile=/etc/default/scalelite
 ExecStartPre=-/usr/bin/docker kill scalelite-recording-importer
 ExecStartPre=-/usr/bin/docker rm scalelite-recording-importer
-ExecStartPre=/usr/bin/docker pull blindsidenetwks/scalelite:${SCALELITE_TAG}-recording-importer
-ExecStart=/usr/bin/docker run --name scalelite-recording-importer --env-file /etc/default/scalelite --network scalelite --mount type=bind,source=${SCALELITE_RECORDING_DIR},target=/var/bigbluebutton blindsidenetwks/scalelite:${SCALELITE_TAG}-recording-importer
+ExecStartPre=/usr/bin/docker pull ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-recording-importer
+ExecStart=/usr/bin/docker run --name scalelite-recording-importer --env-file /etc/default/scalelite --network scalelite --mount type=bind,source=${SCALELITE_RECORDING_DIR},target=/var/bigbluebutton ${SCALELITE_REPO}/scalelite:${SCALELITE_TAG}-recording-importer
+
 [Install]
 WantedBy=scalelite.target
