--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,28 @@ publish_dockerhub:
     - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-recording-importer
     - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-nginx
 
+publish_dockerhub_all:
+  extends: .dockerhub
+  except:
+    refs:
+      - master
+      - tags
+    variables:
+      - $PUBLISH_ARTIFACTS
+  script:
+    - docker pull $CI_REGISTRY_IMAGE/api:git-$CI_COMMIT_SHA
+    - docker pull $CI_REGISTRY_IMAGE/poller:git-$CI_COMMIT_SHA
+    - docker pull $CI_REGISTRY_IMAGE/recording-importer:git-$CI_COMMIT_SHA
+    - docker pull $CI_REGISTRY_IMAGE/nginx:git-$CI_COMMIT_SHA
+    - docker tag $CI_REGISTRY_IMAGE/api:git-$CI_COMMIT_SHA $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-api
+    - docker tag $CI_REGISTRY_IMAGE/poller:git-$CI_COMMIT_SHA $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-poller
+    - docker tag $CI_REGISTRY_IMAGE/recording-importer:git-$CI_COMMIT_SHA $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-recording-importer
+    - docker tag $CI_REGISTRY_IMAGE/nginx:git-$CI_COMMIT_SHA $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-nginx
+    - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-api
+    - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-poller
+    - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-recording-importer
+    - docker push $DOCKERHUB_IMAGE:$CI_COMMIT_REF_NAME-nginx
+
 publish_dockerhub_latest:
   extends: .dockerhub
   only:
