--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,7 +161,7 @@ publish_dockerhub_all:
   extends: .dockerhub
   only:
     variables:
-      - $PUBLISH_ARTIFACTS
+      - $PUBLISH_ARTIFACTS && $CI_COMMIT_REF_NAME != "master"
   script:
     - docker pull $CI_REGISTRY_IMAGE/api:git-$CI_COMMIT_SHA
     - docker pull $CI_REGISTRY_IMAGE/poller:git-$CI_COMMIT_SHA
