--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,22 +45,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - name: Bundle install
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
-
-      - name: Run Rubocop
-        run: bundle exec rubocop --fail-level F
-
-      - name: Run Rails Test
-        env:
-          DATABASE_URL: postgres://postgres:password@localhost:5432/scalelite_test
-        run:  |
-          bundler exec rails test:db
+      # - name: Bundle install
+      #   run: |
+      #     bundle config path vendor/bundle
+      #     bundle install --jobs 4 --retry 3
+      #
+      # - name: Run Rubocop
+      #   run: bundle exec rubocop --fail-level F
+      #
+      # - name: Run Rails Test
+      #   env:
+      #     DATABASE_URL: postgres://postgres:password@localhost:5432/scalelite_test
+      #   run:  |
+      #     bundler exec rails test:db
 
       - name: Trigger Build Workflow
-        if: success()
+        if: ${{ secrets.CR_PAT }} && success()
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.CR_PAT }}
