require secrets.CR_PAT for triggering build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,8 +61,8 @@ jobs:
 
       - name: Trigger Build Workflow
         env:
-          cr_pat: ${{ secrets.CR_PAT }}
-        if: ${{env.cr_pat}} == 'aaa' && success()
+          CR_PAT: ${{ secrets.CR_PAT }}
+        if: ${{env.CR_PAT}} != '' && success()
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.CR_PAT }}
