--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,27 +45,27 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      # - name: Bundle install
-      #   run: |
-      #     bundle config path vendor/bundle
-      #     bundle install --jobs 4 --retry 3
-      #
-      # - name: Run Rubocop
-      #   run: bundle exec rubocop --fail-level F
-      #
-      # - name: Run Rails Test
-      #   env:
-      #     DATABASE_URL: postgres://postgres:password@localhost:5432/scalelite_test
-      #   run:  |
-      #     bundler exec rails test:db
+      - name: Bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
 
-      - name: Trigger Build Workflow
+      - name: Run Rubocop
+        run: bundle exec rubocop --fail-level F
+
+      - name: Run Rails Test
         env:
-          CR_PAT: ${{ secrets.CR_PAT }}
-        if: ${{env.CR_PAT}} && success()
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{env.CR_PAT}} || ''
-          repository: ${{ github.repository }}
-          event-type: trigger-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+          DATABASE_URL: postgres://postgres:password@localhost:5432/scalelite_test
+        run:  |
+          bundler exec rails test:db
+
+      # - name: Trigger Build Workflow
+      #   env:
+      #     CR_PAT: ${{ secrets.CR_PAT }}
+      #   if: ${{env.CR_PAT}} && success()
+      #   uses: peter-evans/repository-dispatch@v1
+      #   with:
+      #     token: ${{env.CR_PAT}} || ''
+      #     repository: ${{ github.repository }}
+      #     event-type: trigger-build
+      #     client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
